<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sup_home_menu"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/Home"
        app:showAsAction="always" />

    <item
        android:id="@+id/sup_map_menu"
        android:enabled="true"
        android:icon="@drawable/map_icon"
        android:title="@string/map"
        app:showAsAction="always" />

    <item
        android:id="@+id/sup_current_order"
        android:enabled="true"
        android:icon="@drawable/list"
        android:title="@string/current_order"
        app:showAsAction="always" />
    <item
        android:id="@+id/sup_account_menu"
        android:enabled="true"
        android:icon="@drawable/account_icon"
        android:title="@string/account"
        app:showAsAction="always" />

</menu>