<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cus_favourites_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="120dp"
        android:clipToPadding="false"
        android:background="#00FFFFFF"
        android:layout_marginLeft="@dimen/normal_padding"
        android:layout_marginRight="@dimen/normal_padding"
        android:layout_marginStart="@dimen/normal_padding"
        android:layout_marginEnd="@dimen/normal_padding"/>

    <LinearLayout
        android:id="@+id/cus_favourites_fragment_empty_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nothing_favourited_yet"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:src="@drawable/ic_sad"
            android:contentDescription="@string/app_name" />

    </LinearLayout>
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/cus_favourites_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="70dp"
        android:text="@string/add_a_new_item"
        app:icon="@drawable/ic_add"
        app:backgroundTint="#9E0000"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        android:theme="@style/Theme.MaterialComponents.NoActionBar" />


</RelativeLayout>
